--- a/style/style.css
+++ b/style/style.css
@@ -4,10 +4,20 @@
     padding: 0;
 }
 
+body {
+    font-family: "Roboto", sans-serif;
+}
+
+header {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
 .logo-container {
     font-family: "Nunito", sans-serif;
     font-size: 2rem;
-    max-width:fit-content
 }
 
 .logo {
@@ -23,4 +33,15 @@
     margin-top: -11px;
     text-align: end;
     text-transform: uppercase;
+}
+
+.user-container {
+    align-items: center;
+    display: flex;
+    gap: .5rem;
+}
+
+.user-avatar {
+    max-width: 100%;
+    width: 1.5rem;
 }
